Provides a mechanism to get the size of the JSON representation of an event. (#6635)
Provides a mechanism to get the size of the JSON representation of an event.

This adds a new toJsonString() function to expressions. Updates length() function to accept a direct string as input, so that it can be composed with toJsonString().

Includes a fix for add_entries to validate expressions, but not evaluate them in the constructor. The approach was brittle and failed for the new toJsonString function.

Resolves #6278.

Signed-off-by: David Venable <dlv@amazon.com>